--- a/MailinglistSocialMediaFooter.html
+++ b/MailinglistSocialMediaFooter.html
@@ -33,7 +33,7 @@
             </td>
           </tr>
           <tr>
-            <td width="548" colspan="2" valign="top" style="width: 410.8pt; border-top: none; border-left: 4.5pt solid rgb(153, 255, 153); border-bottom: none; border-right: 4.5pt solid rgb(153, 255, 153); background: url(&quot;https://www.regonline.com.au/Manager/Email/initial&quot;) white; padding: 0mm 0pt;">
+            <td width="548" colspan="2" valign="top" style="width: 410.8pt; border-top: none; border-left: 4.5pt solid rgb(153, 255, 153); border-bottom: none; border-right: 4.5pt solid rgb(153, 255, 153); background: url(&quot;&quot;) white; padding: 0mm 0pt;">
               <p style="margin: 6pt 0mm;"></p>
               <div style="text-align: left;">
                 <div style="text-align: center;"><strong style="color: rgb(192, 192, 192); font-family: Helvetica;">Join my mailing list for addional updates!</strong></div>
