--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
               <meta http-equiv="X-UA-Compatible" content="ie=edge">
               <title>Get updates!</title
               <!--bootsrap install-->
+                  
               <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
               
               <style>
+                  */Something is wrong in this area. Background image not showing/*
                body, html{
                 height: 100%;
                }
