--- a/EmailEdit4.html
+++ b/EmailEdit4.html
@@ -23,7 +23,7 @@
         /* End reset */
 		
 		
-		/* tablet/medium screen media queries */
+		
         @media screen and (max-width: 630px){
                 
 				                   
@@ -137,7 +137,7 @@
                                                                 <tr>
                                   <!--left side blocks-->
                                                                     <td width="135" align="center"><a href="#"><img src="Image" border="0" style="display:block;"/></a></td>
-                                                                    <td width="20"></td>
+                                                                    <td width="20"></td> <!--DO NOT FORGET IMAGES NEED TO BE CLICKABLE TO WEBSITE-->
                                                                     <td width="135" align="center"><a href="#"><img src="Image" border="0" style="display:block;"/></a></td>
                                                                 </tr>
                                                             </table>
@@ -151,7 +151,7 @@
                                                             <table border="0" cellspacing="0" cellpadding="0">
                                                                 <tr>
                                                                     <td valign="top" width="135" align="center" style="font-size:16px; color:#A495BF;"><font face="'Roboto', Arial, sans-serif">Wish list Item 1</font></td>
-                                                                    <td width="20"></td>
+                                                                    <td width="20"></td> <!-- PRICE OF ITEM AND BRAND-->
                                                                     <td valign="top" width="135" align="center"  style="font-size:16px; color:#A495BF;"><font face="'Roboto', Arial, sans-serif">Wish List Item 2</font></td>
                                                                 </tr>
                                                             </table>
@@ -174,7 +174,7 @@
                                                                 <tr>
                                        <!--right side blocks-->
                                                                     <td width="135" align="center"><a href="#"><img src="image" border="0" style="display:block;"/></a></td>
-                                                                    <td width="20"></td>
+                                                                    <td width="20"></td> <!--CLICKABLE IMAGES-->
                                                                     <td width="135" align="center"><a href="#"><img src="images" border="0" style="display:block;"/></a></td>
                                                                 </tr>
                                                             </table>
@@ -188,7 +188,7 @@
                                                             <table border="0" cellspacing="0" cellpadding="0">
                                                                 <tr>
                                                                     <td valign="top" width="135" align="center" style="font-size:16px; color:#A495BF;"><font face="'Roboto', Arial, sans-serif">Wish list item 3</font></td>
-                                                                    <td width="20"></td>
+                                                                    <td width="20"></td> <!--price of item and brand-->
                                                                     <td valign="top" width="135" align="center"  style="font-size:16px; color:#A495BF;"><font face="'Roboto', Arial, sans-serif">Wish list item 4</font></td>
                                                                 </tr>
                                                             </table>
