--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
               <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
               
               <style>
-                  */Something is wrong in this area. Background image not showing/*
-               body, html{
+                  */Something is wrong in this area. Background image not showing
+                  
+               .body, html{
                 height: 100%;
                }
                     .bg{
